fix: Fixed current unit test